--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,12 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    background-color: #E7E5D9;
+}
+
+
+h1{
+    display: inline-block;
+    text-shadow: 2px 2px 3px;
+    
