--- a/css/main.css
+++ b/css/main.css
@@ -25,4 +25,26 @@ body {
 h1{
     display: inline-block;
     text-shadow: 2px 2px 3px;
+}
     
+h1{
+    text-align: center;
+    margin:0;
+    padding:0;
+}
+
+h2 {
+   position: absolute;
+   top: 240px;
+   left: 0;
+   width: 100%;
+   margin: 0 auto;
+   width: 500px;
+   height: 50px;
+}
+
+.title {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
