--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,27 @@ html {
     text-size-adjust: 100%;
 }
 
+@media only screen and (min-width: 60em) {
+   
+    html {
+        font-size: 110%;
+    }
+}
+    
+@media only screen and (min-width: 90em) {
+     
+    html {
+        font-size: 120%;
+    }
+}
+    
+@media only screen and (min-width: 120em) {
+     
+    html {
+        font-size: 130%;
+    }
+}
+
 *, *::before, *::after {
     box-sizing: inherit;
 }
@@ -48,3 +69,39 @@ h2 {
     padding: 0;
     margin: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 25em) {
+@media only screen and (min-width: 38em) {
+@media only screen and (min-width: 60em) {
