--- a/css/main.css
+++ b/css/main.css
@@ -40,34 +40,35 @@ html {
 
 body {
     background-color: #E7E5D9;
-}
-
-
-h1{
-    display: inline-block;
-    text-shadow: 2px 2px 3px;
-     text-align: center;
-    margin:0;
-    padding:0;
-}
-
-h2 {
-   position: absolute;
-   top: 240px;
-   left: 0;
-   width: 100%;
-   margin: 0 auto;
-   width: 500px;
-   height: 50px;
-}
-
-.title {
-    text-align: center;
     padding: 0;
     margin: 0;
 }
 
+.masthead {
+    text-align: center;
+    margin: 0 auto;
+}
 
+.shadow {
+    text-shadow: 2px 2px #87714F;
+}
+
+.center { 
+    text-align: center;
+    align-content: center center;
+    vertical-align: center;
+    margin: 0 auto;
+}
+
+
+.title {
+    background-image: url(../images/star_padge.svg), url(../images/star_padge.svg);
+     background-color: #E7E5D9;
+    background-position: 6% 50%, 94% 50%;
+    background-repeat: no-repeat;
+    background-size: 45px 45px;
+    margin: 0 auto; 
+}
 
 
 
