--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,12 @@ body {
 }
 
 
+.handcuffs {
+    margin-left: 38%;
+    margin-right: 38%;
+    width: 24%;
+}
+
 @media only screen and (min-width: 25em) {
 @media only screen and (min-width: 38em) {
 @media only screen and (min-width: 60em) {
